--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "music-bot",
+  "name": "scrimsbot",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "author": "ZerioDev",
-  "version": "5.0.0",
-  "repository": "https://github.com/ZerioDev/Music-bot.git",
-  "description": "A complete code to download for a music bot. Using a module (discord-player).",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "author": "Shahzain",
+  "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
-    "discord-player": "^3.2.0",
     "discord.js": "^12.5.1",
-    "ffmpeg-static": "^4.2.7"
+    "quick.db": "^7.1.3"
   }
 }
